fix: profile image not visible on register form

--- a/public/css/profile-page.css
+++ b/public/css/profile-page.css
@@ -188,7 +188,7 @@ input[type="file"] {
 
 .custom-card-subtitle-container {
     font-weight: 700;
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 8px;
     text-align: center;
 }
